# vaxsim

./: .gitignore  README.md  params.yaml  pyproject.toml  run_vaxsim.py  vaxsim.py
docs/: Supplementary.md
docs/source/: conf.py  index.rst  installation.rst  model.rst  overview.rst  simulation.rst
src/: calibration.py  data.csv  model.py  run.py  utils.py
src/output/scenario_analysis/: scenario_analysis.tex
src/vaxsim/: __init__.py  calibration.py  model.py  plot.py  run.py  utils.py
