[tool.poetry]
name = "fmd-sirsv"
version = "0.1.0"
description = "sirsv model with immunity waning for FMD disease"
authors = ["Adish"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.12.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
plotly = "^5.22.0"
seaborn = "^0.13.2"
argparse = "^1.4.0"
logging = "^0.4.9.6"
tqdm = "^4.66.5"
pathlib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pyaml = "^23.12.0"
math0 = "^1.1"
SALib = "^1.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
